refactor: 객체 지향 설계 원칙, 묻지말고 시켜라 원칙 적용